--- a/index.html
+++ b/index.html
@@ -6,6 +6,33 @@
     <link rel="stylesheet" href="css/master.css">
   </head>
   <body>
+    <header>
 
+    </header>
+
+    <main>
+      <section class="first">
+        <!-- first section -->
+      </section>
+
+      <section class="second">
+        <!-- second section -->
+        <div class="title">
+
+        </div>
+
+        <div class="container">
+
+        </div>
+        <div class="container">
+
+        </div>
+        <div class="container">
+
+        </div>
+      </section>
+    </main>
+
+    <footer></footer>
   </body>
 </html>
