--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>layout</title>
     <link rel="stylesheet" href="css/master.css">
   </head>
   <body>
@@ -17,7 +17,7 @@
 
       <section class="second">
         <!-- second section -->
-        <div class="title">
+        <div id="title">
 
         </div>
 
